--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ credentials.json
 credentials_backup.json
 .streamlit/secrets.toml
 app_backup.py
+secrets_ready.toml
 optimal-buffer-485616-v2-4371cd7cff25.json
 __pycache__/
 *.pyc
